--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,9 @@
     "autoprefixer": "^10.4.21",
     "axios": "^1.12.2",
     "postcss": "^8.5.6",
+    "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.1",
     "socket.io-client": "^4.8.1",
