--- a/frontend/remote-work-collaborate-suite/package.json
+++ b/frontend/remote-work-collaborate-suite/package.json
@@ -13,8 +13,10 @@
     "@reduxjs/toolkit": "^2.9.0",
     "@tailwindcss/cli": "^4.1.13",
     "axios": "^1.12.2",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "lucide-react": "^0.544.0",
+    "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.1",
     "socket.io-client": "^4.8.1"
