--- a/backend/package.json
+++ b/backend/package.json
@@ -11,14 +11,17 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "@supabase/supabase-js": "^2.57.4",
+    "@supabase/supabase-js": "^2.58.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.8.1",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "ws": "^8.18.3",
+    "y-websocket": "^1.5.4",
+    "yjs": "^13.6.27"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
