--- a/frontend/remote-work-collaborate-suite/package.json
+++ b/frontend/remote-work-collaborate-suite/package.json
@@ -19,7 +19,9 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "y-websocket": "^3.0.0",
+    "yjs": "^13.6.27"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
