--- a/frontend/remote-work-collaborate-suite/package.json
+++ b/frontend/remote-work-collaborate-suite/package.json
@@ -10,20 +10,34 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "@reduxjs/toolkit": "^2.9.0",
     "@tailwindcss/cli": "^4.1.13",
     "axios": "^1.12.2",
+    "buffer": "^6.0.3",
+    "events": "^3.3.0",
+    "highlight.js": "^11.11.1",
+    "konva": "^10.0.2",
     "lucide-react": "^0.544.0",
+    "process": "^0.11.10",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
+    "react-konva": "^19.0.10",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.1",
+    "rollup-plugin-node-polyfills": "^0.2.1",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.8.1",
+    "util": "^0.12.5",
+    "y-quill": "^1.0.0",
     "y-websocket": "^3.0.0",
     "yjs": "^13.6.27"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@eslint/js": "^9.35.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
