--- a/frontend/remote-work-collaborate-suite/package.json
+++ b/frontend/remote-work-collaborate-suite/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@reduxjs/toolkit": "^2.9.0",
+    "@supabase/supabase-js": "^2.74.0",
     "@tailwindcss/cli": "^4.1.13",
     "axios": "^1.12.2",
     "buffer": "^6.0.3",
@@ -24,6 +25,7 @@
     "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-calendar": "^6.0.0",
     "react-dom": "^18.3.1",
     "react-konva": "^19.0.10",
     "react-redux": "^9.2.0",
