--- a/frontend/remote-work-collaborate-suite/package.json
+++ b/frontend/remote-work-collaborate-suite/package.json
@@ -19,6 +19,7 @@
     "events": "^3.3.0",
     "highlight.js": "^11.11.1",
     "jspdf": "^3.0.3",
+    "katex": "^0.16.25",
     "konva": "^10.0.2",
     "lucide-react": "^0.544.0",
     "process": "^0.11.10",
